refactor(Server): simplify stream chains