@@ -4,7 +4,6 @@ import io.grpc.Status;
 import io.grpc.stub.StreamObserver;
 import java.util.List;
 import java.util.concurrent.atomic.AtomicBoolean;
-import java.util.stream.Collectors;
 import pt.tecnico.distledger.common.Logger;
 import pt.tecnico.distledger.contract.DistLedgerCommonDefinitions;
 import pt.tecnico.distledger.contract.distledgerserver.CrossServerDistLedger.PropagateStateRequest;
@@ -67,14 +66,12 @@ public class DistLedgerCrossServerServiceImpl
       // First we parse the operations from the request, to ensure we don't modify the state if
       // the request is invalid.
       List<Operation> operations =
-          request.getState().getLedgerList().stream()
-              .map(this::parseOperation)
-              .collect(Collectors.toList());
+          request.getState().getLedgerList().stream().map(this::parseOperation).toList();
 
       // Safety: the operations are executed and stored in the ledger in the same order they were
       // received. Since the primary server always waits for a response before continuing, we don't
       // need to worry about concurrent calls to propagateState.
-      operations.stream().forEach(op -> op.accept(executor));
+      operations.forEach(op -> op.accept(executor));
 
       responseObserver.onNext(PropagateStateResponse.getDefaultInstance());
       responseObserver.onCompleted();
